force-app/main/default/objects/Credit_Card_Application__c/fields/AECB_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>AECB_Consent_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AECB Consent Form</label>
    <type>Checkbox</type>
</CustomField>