force-app/main/default/objects/Credit_Card_Application__c/fields/AECB_Score__c.field-meta.xml
<CustomField>
    <fullName>AECB_Score__c</fullName>
    <description>UAE&apos;s official credit bureau score (ranges from 300 to 900)</description>
    <label>AECB Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>