force-app/main/default/objects/Credit_Card_Application__c/fields/Agent_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_ID__c</fullName>
    <label>Agent Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>