force-app/main/default/objects/Credit_Card_Application__c/fields/All_Documents_Complete__c.field-meta.xml
<CustomField>
    <fullName>All_Documents_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Documents Complete</label>
    <type>Checkbox</type>
</CustomField>