force-app/main/default/objects/Credit_Card_Application__c/fields/Assigned_Officer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Officer__c</fullName>
    <label>Assigned Officer</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>