force-app/main/default/objects/Credit_Card_Application__c/fields/Bank_Submitted_To__c.field-meta.xml
<CustomField>
    <fullName>Bank_Submitted_To__c</fullName>
    <label>Bank Submitted To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADCB</fullName>
            </value>
            <value>
                <fullName>CBD</fullName>
            </value>
            <value>
                <fullName>DIB</fullName>
            </value>
            <value>
                <fullName>Emirates NBD</fullName>
            </value>
            <value>
                <fullName>FAB</fullName>
            </value>
            <value>
                <fullName>Mashreq</fullName>
            </value>
            <value>
                <fullName>RAKBANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>