force-app/main/default/objects/Credit_Card_Application__c/fields/Card_Type_Applied__c.field-meta.xml
<CustomField>
    <fullName>Card_Type_Applied__c</fullName>
    <label>Card Type Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cashback</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Infinite</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>