force-app/main/default/objects/Credit_Card_Application__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listed Company</fullName>
            </value>
            <value>
                <fullName>Non-Listed Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>