force-app/main/default/objects/Credit_Card_Application__c/fields/Debt_Burden_Ratio_DBR__c.field-meta.xml
<CustomField>
    <fullName>Debt_Burden_Ratio_DBR__c</fullName>
    <label>Debt Burden Ratio (DBR)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>