force-app/main/default/objects/Credit_Card_Application__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <inlineHelpText>The date &amp; Time on which the final underwriting decision (Approved/Rejected) was made.</inlineHelpText>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>