force-app/main/default/objects/Credit_Card_Application__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>