force-app/main/default/objects/Credit_Card_Application__c/fields/Emirates_ID_Copy__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emirates ID Copy</label>
    <type>Checkbox</type>
</CustomField>