force-app/main/default/objects/Credit_Card_Application__c/fields/Emirates_ID_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Expiry__c</fullName>
    <label>Emirates ID Expiry</label>
    <required>true</required>
    <type>Date</type>
</CustomField>