force-app/main/default/objects/Credit_Card_Application__c/fields/Emirates_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Number__c</fullName>
    <externalId>true</externalId>
    <label>Emirates ID Number</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>