force-app/main/default/objects/Credit_Card_Application__c/fields/Existing_Card_Banks__c.field-meta.xml
<CustomField>
    <fullName>Existing_Card_Banks__c</fullName>
    <label>Existing Card Banks</label>
    <type>TextArea</type>
</CustomField>