force-app/main/default/objects/Credit_Card_Application__c/fields/Existing_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Existing_Credit_Cards__c</fullName>
    <label>Existing Credit Cards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>