force-app/main/default/objects/Credit_Card_Application__c/fields/Existing_Loans__c.field-meta.xml
<CustomField>
    <fullName>Existing_Loans__c</fullName>
    <label>Existing Loans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>