force-app/main/default/objects/Credit_Card_Application__c/fields/Follow_up_Action__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Action__c</fullName>
    <label>Follow-up Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>