force-app/main/default/objects/Credit_Card_Application__c/fields/Follow_up_Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Requested_On__c</fullName>
    <label>Follow-up Requested On</label>
    <type>DateTime</type>
</CustomField>