force-app/main/default/objects/Credit_Card_Application__c/fields/Monthly_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Obligations__c</fullName>
    <label>Monthly Obligations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>