force-app/main/default/objects/Credit_Card_Application__c/fields/Officer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Officer_Notes__c</fullName>
    <label>Officer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>