force-app/main/default/objects/Credit_Card_Application__c/fields/Passport_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry__c</fullName>
    <label>Passport Expiry</label>
    <required>true</required>
    <type>Date</type>
</CustomField>