force-app/main/default/objects/Credit_Card_Application__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AECB Score</fullName>
            </value>
            <value>
                <fullName>Incomplete Docs</fullName>
            </value>
            <value>
                <fullName>Low Salary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Visa Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>