force-app/main/default/objects/Credit_Card_Application__c/fields/Relationship_with_Primary_Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Primary_Card_Holder__c</fullName>
    <label>Relationship with Primary Card Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>