force-app/main/default/objects/Credit_Card_Application__c/fields/Residency_Proof__c.field-meta.xml
<CustomField>
    <fullName>Residency_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tenancy Contract / Utility Bill</inlineHelpText>
    <label>Residency Proof</label>
    <type>Checkbox</type>
</CustomField>