force-app/main/default/objects/Credit_Card_Application__c/fields/Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>Resident_Status__c</fullName>
    <label>Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>