force-app/main/default/objects/Credit_Card_Application__c/fields/Salary_Account_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Salary_Account_IBAN__c</fullName>
    <label>Salary Account IBAN</label>
    <length>23</length>
    <required>true</required>
    <type>Text</type>
</CustomField>