force-app/main/default/objects/Credit_Card_Application__c/fields/Salary_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Salary_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary Certificate</label>
    <type>Checkbox</type>
</CustomField>