force-app/main/default/objects/Credit_Card_Application__c/fields/Salary_Transferred_Bank__c.field-meta.xml
<CustomField>
    <fullName>Salary_Transferred_Bank__c</fullName>
    <label>Salary Transferred Bank</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abu Dhabi Commercial Bank (ADCB)</fullName>
            </value>
            <value>
                <fullName>Dubai Islamic Bank (DIB)</fullName>
            </value>
            <value>
                <fullName>Emirates NBD</fullName>
            </value>
            <value>
                <fullName>First Abu Dhabi Bank (FAB)</fullName>
            </value>
            <value>
                <fullName>Mashreq Bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>