force-app/main/default/objects/Credit_Card_Application__c/fields/Status_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Updated__c</fullName>
    <label>Status Last Updated</label>
    <type>DateTime</type>
</CustomField>