force-app/main/default/objects/Credit_Card_Application__c/fields/Supplementary__c.field-meta.xml
<CustomField>
    <fullName>Supplementary__c</fullName>
    <label>Supplementary Card Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>