force-app/main/default/objects/Credit_Card_Application__c/fields/Supplementary_Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Cardholder_Name__c</fullName>
    <label>Supplementary Cardholder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>