force-app/main/default/objects/Credit_Card_Application__c/fields/Total_Existing_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Existing_Credit_Limit__c</fullName>
    <label>Total Existing Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>