force-app/main/default/objects/Credit_Card_Application__c/fields/Trade_License_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Self_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade License Received (Self-Employed)</label>
    <type>Checkbox</type>
</CustomField>