force-app/main/default/objects/Credit_Card_Application__c/fields/Visa_Copy__c.field-meta.xml
<CustomField>
    <fullName>Visa_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Copy</label>
    <type>Checkbox</type>
</CustomField>