force-app/main/default/objects/Credit_Card_Application__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <label>Visa Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Employment Visa</fullName>
            </value>
            <value>
                <fullName>Family Sponsored Visa</fullName>
            </value>
            <value>
                <fullName>Golden Visa</fullName>
            </value>
            <value>
                <fullName>Investor/Partner Visa</fullName>
            </value>
            <value>
                <fullName>Not Applicable (UAE National)</fullName>
            </value>
            <value>
                <fullName>Tourist Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>