force-app/main/default/objects/Credit_Card_Application__c/validationRules/AECB_Score_Valid_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>AECB_Score_Valid_Range</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( AECB_Score__c)),
  OR(
    AECB_Score__c &lt; 300,
    AECB_Score__c &gt; 900
  )
)</errorConditionFormula>
    <errorDisplayField>AECB_Score__c</errorDisplayField>
    <errorMessage>AECB Score must be between 300 and 900.</errorMessage>
</ValidationRule>