force-app/main/default/objects/Credit_Card_Application__c/validationRules/Approved_Limit_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Limit_Required</fullName>
    <active>true</active>
    <description>Approved Credit Limit is mandatory when status is Approved</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Application_Status__c, &quot;Approved&quot;),
  ISBLANK(Approved_Credit_Limit__c)
)</errorConditionFormula>
    <errorMessage>Error Message  : Approved Credit Limit (AED) must be filled when application status is Approved.
Error Location : Field — Approved Credit Limit</errorMessage>
</ValidationRule>