force-app/main/default/objects/Credit_Card_Application__c/validationRules/Emirates_ID_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Emirates_ID_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Emirates_ID_Number__c)),
  OR(
    LEN(Emirates_ID_Number__c) &lt;&gt; 15,
    NOT(ISNUMBER(Emirates_ID_Number__c))
  )
)</errorConditionFormula>
    <errorDisplayField>Emirates_ID_Number__c</errorDisplayField>
    <errorMessage>Emirates ID must be exactly 15 digits. Example: 784199012345678</errorMessage>
</ValidationRule>