force-app/main/default/objects/Credit_Card_Application__c/validationRules/Followup_Action_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Followup_Action_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Follow_up_Requested_On__c)),
  Follow_up_Requested_On__c &lt;= NOW(),
  ISBLANK(Follow_up_Action__c)
)</errorConditionFormula>
    <errorDisplayField>Follow_up_Action__c</errorDisplayField>
    <errorMessage>Please describe the Follow-up Action when a Follow-up Date is set.</errorMessage>
</ValidationRule>