force-app/main/default/objects/Credit_Card_Application__c/validationRules/Minimum_Salary_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Salary_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Monthly_Salary__c)),
  Monthly_Salary__c&lt; 5000
)</errorConditionFormula>
    <errorDisplayField>Monthly_Salary__c</errorDisplayField>
    <errorMessage>Monthly salary must be at least AED 5,000 to qualify for a credit card.</errorMessage>
</ValidationRule>