force-app/main/default/objects/Credit_Card_Application__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Application_Status__c , &quot;Rejected&quot;),
  ISBLANK(TEXT( Rejection_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select a Rejection Reason when marking an application as Rejected.</errorMessage>
</ValidationRule>