force-app/main/default/objects/Credit_Card_Application__c/validationRules/Visa_Expiry_Not_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Visa_Expiry_Not_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Visa_Expiry_Date__c )),
  Visa_Expiry_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Visa_Expiry_Date__c</errorDisplayField>
    <errorMessage>Visa expiry date cannot be in the past. Please verify the customer&apos;s visa status.</errorMessage>
</ValidationRule>