force-app/main/default/objects/Credit_Card_Application__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Monthly_Salary__c</columns>
    <columns>Card_Type_Applied__c</columns>
    <columns>Follow_up_Requested_On__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Applications</label>
</ListView>