force-app/main/default/objects/Credit_Card_Application__c/listViews/Approved_This_Month.listView-meta.xml
<ListView>
    <fullName>Approved_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Card_Type_Applied__c</columns>
    <columns>Approved_Credit_Limit__c</columns>
    <columns>Bank_Submitted_To__c</columns>
    <columns>Decision_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Decision_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Approved This Month</label>
</ListView>