force-app/main/default/objects/Credit_Card_Application__c/listViews/Follow_Up_Today.listView-meta.xml
<ListView>
    <fullName>Follow_Up_Today</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Contact_Number__c</columns>
    <columns>Officer_Notes__c</columns>
    <columns>Follow_up_Action__c</columns>
    <columns>Assigned_Officer__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Follow_up_Requested_On__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Follow Up Today</label>
</ListView>