force-app/main/default/objects/Credit_Card_Application__c/listViews/On_Hold.listView-meta.xml
<ListView>
    <fullName>On_Hold</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Card_Type_Applied__c</columns>
    <columns>Bank_Submitted_To__c</columns>
    <columns>Assigned_Officer__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Officer_Notes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>On Hold</label>
</ListView>