force-app/main/default/objects/Credit_Card_Application__c/listViews/Rejected_Applications.listView-meta.xml
<ListView>
    <fullName>Rejected_Applications</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Rejection_Reason__c</columns>
    <columns>AECB_Score__c</columns>
    <columns>Monthly_Salary__c</columns>
    <columns>Decision_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Applications</label>
</ListView>