force-app/main/default/objects/Credit_Card_Application__c/listViews/Submitted_to_Bank.listView-meta.xml
<ListView>
    <fullName>Submitted_to_Bank</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Bank_Submitted_To__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Card_Type_Applied__c</columns>
    <columns>Assigned_Officer__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Submitted to Bank</value>
    </filters>
    <label>Submitted to Bank</label>
</ListView>