force-app/main/default/objects/Credit_Card_Application__c/listViews/Under_Review.listView-meta.xml
<ListView>
    <fullName>Under_Review</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Card_Type_Applied__c</columns>
    <columns>AECB_Score__c</columns>
    <columns>Monthly_Salary__c</columns>
    <columns>Bank_Submitted_To__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Under Review</label>
</ListView>